--- a/src/container/alert-two/index.hbs
+++ b/src/container/alert-two/index.hbs
@@ -8,7 +8,7 @@
       <h1>{{data.message}}</h1>
       <h2>{{data.info}}</h2>
     </div>
-    <a href="{data.link}" class="alert__button">Повернутись назад</a>
+    <a href="{{data.link}}" class="alert__button">Повернутись назад</a>
   </div>
 </section>
 
