--- a/src/container/purchase-list/index.hbs
+++ b/src/container/purchase-list/index.hbs
@@ -5,7 +5,7 @@
 <main class="main">
   
   {{!-- <form method="POST" action="/purchase-submit?id={{id}}" class="form-card"> --}}
-  {{> heading title="Інформація про замовлення"}}
+  {{!-- {{> heading title="Інформація про замовлення"}}
  {{#each data}} 
  <a href="purchase-info?id={{id}}">
   <div class="info__purchase">
@@ -14,8 +14,33 @@
     <span class="my__totalPrice">Ціна:{{totalPrice}}</span>
     <span class="my__bonus">Бонусів нараховано:{{bonus}}</span>
   </div>
- </a>
+ </a> --}}
+ <section class="purchase-list">
+  {{!-- {{#with data}} --}}
+  {{#each data}}
+  <a href="purchase-info?id={{id}}">
+  <div class="info__purchase">
+    <div class="info-block">
+     <span class="my__id">ID:{{id}}</span>
+    </div>
+    <div class="info-block">
+       <span class="my__title">Назва:</span>
+       <span class="my__title">{{title}}</span>
+    </div>
+<div class="info-block">
+       <span class="my__totalPrice">Ціна:</span>
+       <span class="my__title">{{totalPrice}}</span>
+    </div>
+    <div class="info-block">
+       <span class="my__title">Бонусів нараховано:</span>
+       <span class="my__title">{{bonus}}</span>
+    </div>
+  </div>
+  </a>
   {{/each}}
+  {{!-- {{/with}} --}}
+ </section>
+  {{!-- {{/each}} --}}
 </main>
 
 
