--- a/src/container/purchase-info/index.hbs
+++ b/src/container/purchase-info/index.hbs
@@ -7,7 +7,7 @@
   {{!-- <form method="POST" action="/purchase-submit?id={{id}}" class="form-card"> --}}
   {{> heading title="Інформація про замовлення"}}
   <div class="info__block">
-    {{>info title='id' value=id}}
+    {{>info title="id" value=id}}
   </div>
   {{>divider}}
   <div class="info__block">
