--- a/src/container/purchase-info/index.hbs
+++ b/src/container/purchase-info/index.hbs
@@ -3,7 +3,7 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
  }}
 <main class="main">
-  {{#with data}} 
+  {{#with data.purchase}} 
   {{!-- <form method="POST" action="/purchase-submit?id={{id}}" class="form-card"> --}}
   {{> heading title="Інформація про замовлення"}}
   <div class="info__block">
