--- a/src/container/purchase-list/style.scss
+++ b/src/container/purchase-list/style.scss
@@ -14,25 +14,28 @@
         text-decoration: none;
     }
 }
-
+.info-block {
+    background-color: aqua;
+}
 .info__purchase {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: s.space(4);
+    margin-bottom: s.space(6);
 }
 .my__id {
-    background-color: rgb(74, 128, 128);
+    background-color: rgb(124, 232, 239) ;
     color: black;
 }
 .my__title {
-    background-color: rgb(74, 128, 128) ;
+    background-color: rgb(124, 232, 239) ;
     color: black;
 }
 .my__totalPrice {
-    background-color: rgb(74, 128, 128) ;
+    background-color: rgb(124, 232, 239)  ;
     color: black;
 }
 .my__bonus {
-    background-color: rgb(74, 128, 128) ;
+    background-color: rgb(124, 232, 239)  ;
     color: black;
 }
