--- a/src/container/spotify-track-add/index.hbs
+++ b/src/container/spotify-track-add/index.hbs
@@ -7,7 +7,7 @@
   <div class="main__content">
     <h1 class="title title--center">Додати до плейліста</h1>
   
- <ul class="track-list">
+ <ul class="track__list">
   {{#each tracks}}
   <li class="track">
     <img src="{{image}}" alt="{{name}}" >
