--- a/src/container/spotify-playlist-add/index.hbs
+++ b/src/container/spotify-playlist-add/index.hbs
@@ -10,7 +10,7 @@
       <img src="/svg/add_button.svg" >
      Додати
     </a>
- <ul class="track-list">
+ <ul class="track__list">
   {{#each tracks}}
   <li class="track">
     <img src="{{image}}" alt="{{name}}" >
@@ -18,7 +18,7 @@
       <strong class="track__name">{{name}}</strong>
       <em class="track__author">{{author}}</em>
     </div>
-    <a href="/spotify-track-add?playlistId={{.../playlistId}}&trackId={{id}}">
+    <a href="/spotify-track-add?playlistId={{../playlistId}}&trackId={{id}}">
  <img src="/svg/add_button.svg" >
     </a>
    
