--- a/src/container/spotify-playlist/index.hbs
+++ b/src/container/spotify-playlist/index.hbs
@@ -5,12 +5,13 @@
 <main class="main">
   {{#with data}}
   <div class="main__content">
-    <h1 class="title title--center">Додати до плейліста</h1>
+    <h1 class="title title--center">{{name}}</h1>
+  
+ <ul class="track__list">
     <a href="/spotify-track-add?playlistId={{playlistId}}" class="add-button">
       <img src="/svg/add_button.svg" >
-      Додати 
+      <div class="title__add">Додати до плейліста</div>
     </a>
- <ul class="track-list">
   {{#each tracks}}
   <li class="track">
     <img src="{{image}}" alt="{{name}}" >
@@ -18,7 +19,7 @@
       <strong class="track__name">{{name}}</strong>
       <em class="track__author">{{author}}</em>
     </div>
-    <a href="/spotify-track-delete?playlistId={{.../playlistId}}&trackId={{id}}">
+    <a href="/spotify-track-delete?playlistId={{../playlistId}}&trackId={{id}}">
  <img src="/svg/add_button.svg" >
     </a>
    
